@@ -1,3 +1,7 @@
+Bug fixes in 1.17.1:
+ * Fix Print dialog
+ * Fix command-line "Print" command
+
 Changes in 1.17:
  * Add new broken axis widget with gaps in the numerical sequence
  * Grid lines are plotted always under (or over) the data
